# model-monitor-analysis

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: data-definitions.mdc  project.mdc
Z-Archive/skills/beeframes_model/: SKILL.md
Z-Archive/skills/beeframes_monitoring/: SKILL.md
Z-Archive/skills/data_quality/: SKILL.md
Z-Archive/skills/dbt_gold_layer/: SKILL.md
Z-Archive/skills/ml_pipeline/: SKILL.md
Z-Archive/skills/sbs_pipeline/: SKILL.md
configs/: thresholds.yaml
configs/thresholds_history/: 2026-04-26_original.yaml  2026-04-26_pre_anchor_recalibration.yaml  2026-04-27_pre_R7_diurnal_amplitude.yaml  2026-04-27_pre_gate_swap_R6c_R4_to_ATV_R5.yaml
confluence/metrics/: temperature-rule-metrics.md
ground_truth/: ground_truth_statuess_ca_2026.csv  gt_cleaned_ca_2026.csv
notebooks/exploration/: check_files.ipynb
scripts/: pull_samples.py  refresh_aws_credentials.sh
skills/Calibration Review Triage/scripts/: queries.py
skills/Calibration Review Triage/spec/: SPECS.md  queries-to-metrics.md
skills/data_lake/: README.md
skills/data_lake/scripts/: catalog.py  connection.py
skills/data_lake/spec/: spec.txt
skills/group_model_temperature_health/: README.md
skills/group_model_temperature_health/spec/: spec.txt
skills/hives_temperature_plot_decision/: README.md
skills/sensor_group_segment/: README.md
skills/temp_metric/: README.md
skills/temperature_data_export/: README.md
src/model_monitor/: __init__.py
tests/: test_decision.py  test_ingestion.py  test_metrics.py  test_reporting.py  test_triage_rules.py
(+96 files in other folders)
